# prompt-folio

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  create_dummy_pdf.py  deploy.sh  docker-compose.yml  migrate_context_to_json.py  pyproject.toml  pyright_output.txt  start.sh  take_context_screenshot.py  take_screenshots.py  take_settings_screenshot.py  update_cropper.sh  update_editorjs.sh  update_htmx.sh
alembic/: env.py
alembic/versions/: 2d0b4c1301bd_add_admin_session_table.py  499685ee795c_initial_migration.py  95069374a6e7_add_integrations_to_sitesettings.py  968625b21b76_add_intent_to_chatsession.py
app/: config.py  constants.py  database.py  dependencies.py  editorjs_parser.py  main.py  models.py  schemas.py  services.py  utils.py
app/routers/: chat.py  manage.py
app/static/css/: style.css
app/static/js/: avatar-cropper.js  chat-scroll.js  context-editor.js
app/templates/: 500.html  admin_login.html  base.html  chat.html  error_message.html  manage_appearance.html  manage_chat.html  manage_context.html  manage_conversations.html  manage_layout.html  manage_settings.html  message.html  message_pair.html  status.html
app/templates/fragments/: appearance_avatar.html  appearance_identity.html  appearance_meeting.html  appearance_theme.html  context_documents.html  context_documents_section.html  context_editor.html  (+12 more)
tests/: conftest.py  test_chat_sse.py  test_chat_sse_real.py  test_main.py  test_manage_context.py  test_services.py  test_sse.py  test_ui.py
typings/fastapi/: testclient.pyi
typings/slowapi/: __init__.pyi
