[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-folio"
version = "0.1.0"
description = "A FastAPI-based chat interface using Mistral AI and HTMX for recruiters and potential clients."
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]",
    "jinja2",
    "mistralai>=1.10.0",
    "pypdf",
    "python-multipart",
    "httpx",
    "pydantic-settings",
    "slowapi>=0.1.10",
    "sse-starlette>=3.3.0",
    "sqlmodel>=0.0.34",
    "aiosqlite>=0.22.1",
    "greenlet>=3.2.5",
    "alembic>=1.16.5",
    "linkify-it-py>=2.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "httpx",
    "basedpyright",
    "playwright>=1.60.0",
    "pytest-xdist>=3.8.0",
]

[tool.isort]
profile = "black"

[tool.basedpyright]
typeCheckingMode = "recommended"
ignore = ["alembic/versions"]

[tool.pytest.ini_options]
addopts = "-n auto"
